src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Authorized_DFP_Case_Creator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized DFP Case Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoubleClick_for_Salesforce_Support_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DoubleClick for Salesforce Support Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Portal_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_SSO_Email_Addresses__c</fullName>
        <formula>IF(
  NOT(CONTAINS(Email, &quot;10kview&quot;)),
  Email,
  &quot;&quot;
)
+
IF(
  AND(
    NOT(CONTAINS(Contact.Email, &quot;10kview&quot;)),
    Email != Contact.Email
  ),
  IF(
    NOT(CONTAINS(Email, &quot;10kview&quot;)),  
    &quot;, &quot; + Contact.Email,
    Contact.Email
  ),
  &quot;&quot;
)
+
IF(
  AND(
    NOT(CONTAINS(Contact.Other_Email__c, &quot;10kview&quot;)),
    Email != Contact.Other_Email__c,
    Contact.Email != Contact.Other_Email__c
  ),
  IF(
    OR(
      NOT(CONTAINS(Email, &quot;10kview&quot;)),
      NOT(CONTAINS(Contact.Email, &quot;10kview&quot;))
    ),
    &quot;, &quot; + Contact.Other_Email__c,
    Contact.Other_Email__c
  ),
  &quot;&quot;
)
+
IF(
  AND(
    NOT(CONTAINS(Contact.Webassessor_Email__c, &quot;10kview&quot;)),
    Email != Contact.Webassessor_Email__c,
    Contact.Email != Contact.Webassessor_Email__c,
    Contact.Other_Email__c != Contact.Webassessor_Email__c
  ),
  IF(
    OR(
      NOT(CONTAINS(Email, &quot;10kview&quot;)),
      NOT(CONTAINS(Contact.Email, &quot;10kview&quot;)),
      NOT(CONTAINS(Contact.Other_Email__c, &quot;10kview&quot;))
    ),
    &quot;, &quot; + Contact.Webassessor_Email__c,
    Contact.Webassessor_Email__c
  ),
  &quot;&quot;
)</formula>
        <label>Valid SSO Email Addresses</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Authorized_DFP_Case_Creators</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_DFP_Case_Creator__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Authorized DFP Case Creators</label>
    </listViews>
    <listViews>
        <fullName>DoubleClick_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Authorized_DFP_Case_Creator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Product</value>
        </filters>
        <label>DoubleClick Clients</label>
    </listViews>
    <listViews>
        <fullName>DoubleClick_Support_Team</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Authorized_DFP_Case_Creator__c</columns>
        <columns>DoubleClick_for_Salesforce_Support_Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DoubleClick_for_Salesforce_Support_Team__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DoubleClick Support Team</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Is_Portal_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>System Administrator</value>
        </filters>
        <label>Inactive Community Users</label>
    </listViews>
    <listViews>
        <fullName>Knowledge_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KNOWLEDGE_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Knowledge User</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MARKETING_USER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Marketing Users</label>
    </listViews>
    <listViews>
        <fullName>Product_Clients_Who_Cannot_Create_Cases</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_DFP_Case_Creator__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Product</value>
        </filters>
        <label>Product Clients Who Cannot Create Cases</label>
    </listViews>
    <listViews>
        <fullName>Product_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Product</value>
        </filters>
        <label>Product Community Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>